--- a/source/index.html
+++ b/source/index.html
@@ -35,7 +35,8 @@
     </nav>
   </header>
   <main class="page-main">
-    <section class="page-main__wrap">
+    <div class="page-main__wrap">
+    <section class="page-main__wraper">
       <h1 class="page-main__title">Взгляните на жизнь иначе!</h1>
       <img class="page-main__img" src="img/phone.png" width="320" height="286" alt="рука с телефоном">
     </section>
@@ -48,12 +49,14 @@
       </div>
       <p class="page-main__desc">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
     </div>
+  </div>
     <section class="text">
       <h2 class="text__desc">Устали от серости мегаполиса?<br>Нам есть, что вам
         предложить!
       </h2>
     </section>
     <div class="desc">
+      <div class="desc__wrap">
       <h3 class="desc__title">Поднимает настроение</h3>
       <p class="desc__subtitle">Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько
         кликов!
@@ -63,7 +66,10 @@
       </p>
       <h3 class="desc__title">Заводит новых друзей</h3>
       <p class="desc__subtitle">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых</p>
-      <img class="desc__image" src="img/iphone3.png" width="157" height="320" alt="изображение айфона">
+      </div>
+      <div class="desc__image">
+      <img src="img/iphone3.png" width="157" height="320" alt="изображение айфона">
+      </div>
     </div>
     <div class="slider-review">
       <h3 class="slider-review__title">Николай Петров</h3>
@@ -137,12 +143,14 @@
     </div>
     <div class="contacts">
       <h3 class="contacts__text">Остались вопросы?<br>Свяжитесь с нами!</h3>
+      <div class="contacts__wraper">
       <h4 class="contacts__title">Звоните:</h4>
       <a class="contacts__subtitle" href="tel:+78125556666">+7(812)555-66-66</a>
       <h4 class="contacts__title">Пишите:</h4>
       <a class="contacts__subtitle" href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
       <h4 class="contacts__title">Приезжайте в гости:</h4>
       <p class="contacts__subtitle">ул. Большая<br>Конюшенная, 19/8</p>
+    </div>
       <img class="contacts__svg" src="img/trianglewhitefooter.png" alt="фон">
       <img class="contacts__map" src="img/map.jpg" width="320" height="200" alt="карта месторасположения">
     </div>
