--- a/source/index.html
+++ b/source/index.html
@@ -13,7 +13,11 @@
   <header class="page-header">
     <div class="page-header__nav">
       <a class="page-header__logo" href="#"></a>
-      <button class="page-header__toggle" type="button"><span class="page-header__button">Открыть меню</span></button>
+      <button class="page-header__toggle" type="button"><span class="page-header__button"><svg width="23" height="23"
+            viewBox="0 0 23 23" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M20.8487 1.37761e-06L0 20.8487L2.15131 23L23 2.15131L20.8487 1.37761e-06Z" fill="white" />
+            <path d="M2.15131 0L0 2.15131L20.8487 23L23 20.8487L2.15131 0Z" fill="white" />
+          </svg></span></button>
     </div>
     <nav class="main-nav">
       <ul class="main-nav__list site-list">
@@ -54,19 +58,28 @@
       </h2>
     </section>
     <div class="desc">
-      <div class="desc__wrap">
-        <h3 class="desc__title">Поднимает настроение</h3>
-        <p class="desc__subtitle">Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько
-          кликов!
-        </p>
-        <h3 class="desc__title">Меняет мир вокруг</h3>
-        <p class="desc__subtitle">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект
-        </p>
-        <h3 class="desc__title">Заводит новых друзей</h3>
-        <p class="desc__subtitle">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых</p>
+      <div class="desc__feature">
+        <div>
+          <h3 class="desc__title">Поднимает настроение</h3>
+          <p class="desc__subtitle">Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько
+            кликов!
+          </p>
+        </div>
+        <div>
+          <h3 class="desc__title">Меняет мир вокруг</h3>
+          <p class="desc__subtitle">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить
+            эффект
+          </p>
+        </div>
+        <div>
+          <h3 class="desc__title">Заводит новых друзей</h3>
+          <p class="desc__subtitle">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых</p>
+        </div>
       </div>
       <div class="desc__image">
-        <img class="desc__img" src="img/iphone3.png" width="157" height="320" alt="изображение айфона">
+        <img class="desc__img1" src="img/phonedesctop1.png" width="186" height="382" alt="изображение айфона">
+        <img class="desc__img2" src="img/phonedesctop2.png" width="186" height="382" alt="изображение айфона">
+        <img class="desc__img3" src="img/iphone3.png" width="157" height="320" alt="изображение айфона">
       </div>
     </div>
     <div class="study">
@@ -161,8 +174,9 @@
         <h4 class="contacts__title">Приезжайте в гости:</h4>
         <p class="contacts__subtitle">ул. Большая<br>Конюшенная, 19/8</p>
       </div>
-      <img class="contacts__svg" src="img/trianglewhitefooter.png" alt="фон">
-      <img class="contacts__map" src="img/map.jpg" width="320" height="200" alt="карта месторасположения">
+      <iframe class="contacts__map"
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6934907542188!2d30.32087666293226!3d59.937228080506834!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310f95b28107%3A0xc42fdf5b93274878!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDI1LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywg0KDQvtGB0YHQuNGPLCAxOTExODY!5e0!3m2!1sru!2sby!4v1629035334928!5m2!1sru!2sby"
+        width="600" height="450" style="border:0;" allowfullscreen=""></iframe>
     </div>
   </main>
   <footer class="page-footer">
