--- a/source/index.html
+++ b/source/index.html
@@ -38,24 +38,27 @@
   </header>
   <main class="page-main">
     <div class="page-main__wrap">
-      <section class="page-main__wraper">
-        <h1 class="page-main__title">Взгляните на жизнь иначе!</h1>
-      </section>
-      <img class="page-main__img" src="img/phone.png" width="320" height="286" alt="рука с телефоном">
+      <div class="page-main__wraper">
+        <div class="page-main__wraper-title">
+          <p class="page-main__title">Взгляните на жизнь иначе!</p>
+        </div>
+      </div>
       <div class="page-main__operating">
         <a class="page-main__download" href="#">Скачать приложение</a>
         <div class="page-main__operating-system">
-          <a href="#"><img src="img/applelogo.svg" width="47" height="56" alt="логотип эпл"></a>
-          <a href="#"><img src="img/androidlogo.svg" width="43" height="47" alt="логотип андроид"></a>
-          <a href="#"><img src="img/microsoftlogo.svg" width="44" height="41" alt=" логотип виндовс"></a>
+          <a class="page-main__apple-logo" href="#"><img src="img/applelogo.svg" width="47" height="56"
+              alt="логотип эпл"></a>
+          <a class="page-main__android-logo" href="#"><img src="img/androidlogo.svg" width="43" height="47"
+              alt="логотип андроид"></a>
+          <a class="page-main__windows-logo" href="#"><img src="img/microsoftlogo.svg" width="44" height="41"
+              alt=" логотип виндовс"></a>
         </div>
         <p class="page-main__desc">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
       </div>
     </div>
     <section class="text">
-      <h2 class="text__desc">Устали от серости мегаполиса?<br>Нам есть, что вам
-        предложить!
-      </h2>
+      <h2 class="text__desc">Устали от серости мегаполиса?</h2>
+      <h2 class="text__desc">Нам есть, что вам предложить!</h2>
     </section>
     <div class="desc">
       <div class="desc__feature">
@@ -77,9 +80,6 @@
         </div>
       </div>
       <div class="desc__image">
-        <img class="desc__img1" src="img/phonedesctop1.png" width="186" height="382" alt="изображение айфона">
-        <img class="desc__img2" src="img/phonedesctop2.png" width="186" height="382" alt="изображение айфона">
-        <img class="desc__img3" src="img/iphone3.png" width="157" height="320" alt="изображение айфона">
       </div>
     </div>
     <div class="study">
@@ -167,12 +167,18 @@
     <div class="contacts">
       <h3 class="contacts__text">Остались вопросы?<br>Свяжитесь с нами!</h3>
       <div class="contacts__wraper">
-        <h4 class="contacts__title">Звоните:</h4>
-        <a class="contacts__subtitle" href="tel:+78125556666">+7(812)555-66-66</a>
-        <h4 class="contacts__title">Пишите:</h4>
-        <a class="contacts__subtitle" href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
-        <h4 class="contacts__title">Приезжайте в гости:</h4>
-        <p class="contacts__subtitle">ул. Большая<br>Конюшенная, 19/8</p>
+        <div class="contacts__item">
+          <h4 class="contacts__title">Звоните:</h4>
+          <a class="contacts__subtitle" href="tel:+78125556666">+7(812)555-66-66</a>
+        </div>
+        <div class="contacts__item">
+          <h4 class="contacts__title">Пишите:</h4>
+          <a class="contacts__subtitle" href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+        </div>
+        <div class="contacts__item">
+          <h4 class="contacts__title">Приезжайте в гости:</h4>
+          <p class="contacts__subtitle">ул. Большая<br>Конюшенная, 19/8</p>
+        </div>
       </div>
       <iframe class="contacts__map"
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6934907542188!2d30.32087666293226!3d59.937228080506834!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310f95b28107%3A0xc42fdf5b93274878!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDI1LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywg0KDQvtGB0YHQuNGPLCAxOTExODY!5e0!3m2!1sru!2sby!4v1629035334928!5m2!1sru!2sby"
@@ -180,19 +186,17 @@
     </div>
   </main>
   <footer class="page-footer">
-    <div class="page-footer__social">
-      <img class="page-footer__logo" src="img/logotypebluetablet.svg" width="145" height="40" alt="логотип пинк">
+    <div class="page-footer__logo">
+      <a href="#"><img class="page-footer__logo" src="img/logotypebluetablet.svg" width="145" height="40"
+          alt="логотип пинк"></a>
     </div>
-    <div class="page-footer__image">
-      <a class="page-footer__link" href="#"><img src="img/twitter.svg" width="18" height="14"
-          alt="ссылка на твитерр аккаунт"></a>
-      <a class="page-footer__link" href="#"><img src="img/facebook.svg" width="9" height="18"
-          alt="ссылка на фейсбук аккаунт"></a>
-      <a class="page-footer__link" href="#"><img src="img/youtube.svg" width="15" height="13"
-          alt=" ссылка на ютуб канал"></a>
+    <div class="page-footer__social">
+      <a class="page-footer__twitter" href="#"></a>
+      <a class="page-footer__facebook" href="#"></a>
+      <a class="page-footer__youtube" href="#"></a>
     </div>
     <div class="page-footer__copyright copyright">
-      <p class="copyright__text">Разработано</p>
+      <span class="copyright__text">Разработано</span>
       <a class="copyright__link" href="https://htmlacademy.ru/study"><img src="img/htmlacademy.png" width="27"
           height="34" alt="логотип академии"></a>
     </div>
