--- a/source/form.html
+++ b/source/form.html
@@ -164,6 +164,24 @@
       </form>
     </div>
   </main>
+  <div class="popup popup-warning">
+    <p class="popup-title">Что-то пошло не так!</p>
+    <p class="popup-subtitle">Проверьте поля, выделенные красным,<br>
+      скорее всего вы забыли их заполнить</p>
+    <div class="popup__button-warning">
+      <button class="popup-send" type="button">ok</button>
+    </div>
+  </div>
+  <div class="popup popup-thanks">
+    <p class="popup-title">Ваша заявка отправлена!</p>
+    <p class="popup-subtitle">Спасибо за ваше участие, ваша заявка
+      уже поступила к нам. В ближайшее<br>
+      время мы рассмотрим ее и<br>
+      оповестим вас.</p>
+    <div class="popup__button-thanks">
+      <button class="popup-send" type="button">Закрыть окно</button>
+    </div>
+  </div>
   <footer class="page-footer">
     <div class="page-footer__logo">
       <a href="index.html"><img class="page-footer__logo" src="img/logotypebluetablet.svg" width="145" height="40"
